--- a/xmail/index.html
+++ b/xmail/index.html
@@ -87,7 +87,7 @@
 					<h2></h2>
 					<div class="media">
 						<video id="media_content" poster="./img/01.ContactList.png" controls>
-							<source src="./video/01.atalk_main.mp4" type="video/mp4">
+							<source src="./video/01.xmail_setup.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 						<p></p>
